test/fixtures/templates/stackhelper/quickstart-chemaxon-registry/templates/chemaxon-registry.template
---
AWSTemplateFormatVersion: 2010-09-09
Description: Launches a ChemAxon Compound Registry Instance and database (qs-1of006o41)
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Network Configuration
    Parameters:
    - pVpcId
    - pDmzSubnetA
    - pDmzSubnetB
    - pAppSubnetA
    - pAppSubnetB
    - pDBSubnetA
    - pDBSubnetB
    - pLoadBalancerType
    - pSecurityGroupForWebAccess
    - pWebAccessCIDR
    - Label:
        default: Amazon EC2 Configuration
      Parameters:
      - pEC2KeyPair
      - pAppServerInstanceType
    - Label:
        default: Amazon RDS Configuration
      Parameters:
      - pDBUsername
      - pDBPassword
      - pDBInstanceType
      - pDBAllocatedStorage
      - pDBMultiAZ
    ParameterLabels:
      pAppServerInstanceType:
        default: App Server Instance Type
      pAppSubnetA:
        default: Application Subnet A
      pAppSubnetB:
        default: Application Subnet B
      pDBAllocatedStorage:
        default: Database Storage Capacity
      pDBInstanceType:
        default: Database Instance Type
      pDBMultiAZ:
        default: Multi-AZ Amazon RDS
      pDBPassword:
        default: Database Password
      pDBSubnetA:
        default: Database Subnet A
      pDBSubnetB:
        default: Database Subnet B
      pDBUsername:
        default: Database User/Owner
      pDmzSubnetA:
        default: DMZ Subnet A
      pDmzSubnetB:
        default: DMZ Subnet B
      pEC2KeyPair:
        default: Key Pair for Mosaic Server
      pLoadBalancerType:
        default: Load Balancer Type
      pSecurityGroupForWebAccess:
        default: Web Access Security Group
      pVpcId:
        default: VPC for Deployment
      pWebAccessCIDR:
        default: Web Access CIDR (No SG)
Parameters: 
  pAppServerInstanceType:
    Description: Chemaxon registry app server EC2 instance type
    Type: String
    Default: t2.large
    AllowedValues: 
      - t2.medium
      - t2.large
      - t2.xlarge
      - m5.large
      - m5.xlarge
      - m5.2xlarge
      - m4.large
      - m4.xlarge
      - m4.2xlarge
  pAppSubnetA:
    Description: Production App Subnet A. Target subnet for the app server. 
    Type: AWS::EC2::Subnet::Id
  pAppSubnetB:
    Description: Production App Subnet B. Target subnet for the app server. 
    Type: AWS::EC2::Subnet::Id
  pDBEngine:
    Description: Amazon RDS Oracle Version. Recommend the default.
    Type: String
    Default: oracle-se2
    AllowedValues:
      - oracle-se2
      - oracle-ee
  pDBEngineLicenseModel: 
    Description: Oracle license model.
    AllowedValues:
      - license-included
      - bring-your-own-license
    Type: String
    Default: license-included
  pDBAllocatedStorage:
    Description: Database Total storage size in GB. Default is 50 GB.
    Type: String
    Default: 50 
  pDBInstanceType:
    Description: Database instance class.
    Type: String
    Default: db.t2.large
    AllowedValues: 
      - db.t2.medium
      - db.t2.large
      - db.t2.xlarge
      - db.t2.2xlarge
      - db.r4.large
      - db.r4.xlarge
      - db.r4.2xlarge
      - db.m4.large
      - db.m4.xlarge
      - db.m4.2xlarge
  pDBMultiAZ:
    Description: Multi-AZ Amazon RDS Configuration. true/false - default is false.
    Type: String
    AllowedValues:
    - "true"
    - "false"
    Default: "false"
  pDBPassword:
    Description: Database User/Owner Password
    Type: String
    NoEcho: true
  pDBSubnetA:
    Description: Subnet ID for Production DB Subnet A.
    Type: AWS::EC2::Subnet::Id
  pDBSubnetB:
    Description: Subnet ID for Production DB Subnet B.
    Type: AWS::EC2::Subnet::Id
  pDBUsername:
    Description: Database User/Owner
    Type: String
    Default: cacrDBUser
  pDmzSubnetA:
    Description: Production DMZ Subnet A. Target subnet for the app server. 
    Type: AWS::EC2::Subnet::Id
  pDmzSubnetB:
    Description: Production DMZ Subnet B. Target subnet for the app server. 
    Type: AWS::EC2::Subnet::Id
  pEC2KeyPair:
    Description: Key Name for app server.
    Type: AWS::EC2::KeyPair::KeyName  
  pLoadBalancerType:
    Default: internet-facing
    Type: String
    AllowedValues: 
      - internet-facing
      - internal
  pSecurityGroupForWebAccess:
    Description: Security group for web access
    Type: String
    Default: ""
  pVpcId:
    Description: VPC ID
    Type: AWS::EC2::VPC::Id
  pWebAccessCIDR:
    Description: Will only be used if Web Access Security Group is not specified. Enter 0.0.0.0/0 if you want to open it to the world.
    Type: String
    Default: "10.0.0.0/16"
  pDnsHostedZoneID:
    Description: Internal DNS hosted zone ID.
    Type: String
    Default: ""
  pDnsHostedZoneApexDomain:
    Description: Internal DNS Apex Domain
    Type: String      
    Default: ""
Mappings:
  AWSAMIRegionMap:
    AMI:
      CACOMPREG18: ChemAxon-CompundReg-18.05.14-20180515
    us-east-1: 
      CACOMPREG18: ami-129e0a6d
    us-west-2: 
      CACOMPREG18: ami-6f205217
    eu-west-1: 
      CACOMPREG18: ami-0e6f5f77

Conditions:
  cWebAccessSG: !Not [ !Equals [ !Ref pSecurityGroupForWebAccess, "" ] ]
  cNoWebAccessSG: !Equals [ !Ref pSecurityGroupForWebAccess, "" ]
  cDNSRecord: !Not [ !Or [ !Equals [!Ref pDnsHostedZoneID, ""] , !Equals [!Ref pDnsHostedZoneApexDomain, ""] ] ]
Resources:  
  ###
  ### Security Groups
  ###
  
  rDNSRecord:
    Type: AWS::Route53::RecordSet
    Condition: cDNSRecord
    Properties:
      HostedZoneId: !Ref pDnsHostedZoneID
      Comment: Internal DNS CNAME for ChemAxon Compound Regsitry.
      Name: !Sub chemaxon.${pDnsHostedZoneApexDomain}
      Type: CNAME
      TTL: 60
      ResourceRecords:
      - !GetAtt rApplicationLoadBalancer.DNSName
  
  rSecurityGroupAppServers:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to ChemAxon App Servers.
      VpcId: !Ref pVpcId
      Tags:
      - Key: Name
        Value: sg-chemaxon-registry-appserver
  rSecurityGroupAppServersIngressHttp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref rSecurityGroupAppServers
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      SourceSecurityGroupId: !Ref rSecurityGroupAlbs
  rSecurityGroupAppServersIngressHttps:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref rSecurityGroupAppServers
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref rSecurityGroupAlbs
  rSecurityGroupAlbWithSG:
    Type: AWS::EC2::SecurityGroup
    Condition: cWebAccessSG
    Properties:
      GroupDescription: Allow access to ChemAxon Registry ALBs. Open to SG.
      VpcId: !Ref pVpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        SourceSecurityGroupId: !Ref pSecurityGroupForWebAccess
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        SourceSecurityGroupId: !Ref pSecurityGroupForWebAccess
      Tags:
      - Key: Name
        Value: sg-chemaxon-registry-access-ports-alb-bysg
  rSecurityGroupAlbNoSG:
    Type: AWS::EC2::SecurityGroup
    Condition: cNoWebAccessSG
    Properties:
      GroupDescription: Allow access to ChemAxon Registry ALB. Open to CIDR.
      VpcId: !Ref pVpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref pWebAccessCIDR
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: !Ref pWebAccessCIDR
      Tags:
      - Key: Name
        Value: sg-chemaxon-registry-access-ports-alb-bycidr
  rSecurityGroupAlbs:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to ChemAxon Registry ALBs.
      VpcId: !Ref pVpcId
      Tags:
      - Key: Name
        Value: sg-chemaxon-registry-alb
  rSecurityGroupChemAxonDB:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      GroupDescription: Allow access to ChemAxon CompReg MySQL DB to ChemAxon App Server or other integration points 
      EC2VpcId: !Ref pVpcId
      DBSecurityGroupIngress:
      - EC2SecurityGroupId: !Ref rSecurityGroupAppServers

  ###
  ### Application Load Balancer
  ###
  rApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: !Ref pLoadBalancerType
      SecurityGroups:
        - !Ref rSecurityGroupAlbs
        - !If [ cWebAccessSG, !Ref rSecurityGroupAlbWithSG, !Ref rSecurityGroupAlbNoSG ]
      Subnets:
        - !Ref pDmzSubnetA
        - !Ref pDmzSubnetB
      Tags:
        - Key: Name
          Value: ChemAxon Registry ALB
      Type: application
  rApplicationLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
        LoadBalancerArn: !Ref rApplicationLoadBalancer
        Port: 80
        Protocol: HTTP
        DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref rApplicationLoadBalancerTargetGroup
  rApplicationLoadBalancerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
        VpcId: !Ref pVpcId
        Port: 8080
        HealthCheckIntervalSeconds: 60
        HealthCheckTimeoutSeconds: 30
        HealthyThresholdCount: 2
        UnhealthyThresholdCount: 10
        Protocol: HTTP
        Matcher:
          HttpCode: "200,401"

  ###
  ### Auto Scaling Group
  ###
  rAutoScalingGroupApp:
    Type: AWS::AutoScaling::AutoScalingGroup
    DependsOn: rAutoScalingConfigApp
    Properties:
      AutoScalingGroupName: !Sub ChemAxon-RegAppServer-ASG-${AWS::StackName}
      TargetGroupARNs:
        - !Ref rApplicationLoadBalancerTargetGroup
      VPCZoneIdentifier:
        - !Ref pAppSubnetA
        - !Ref pAppSubnetB
      LaunchConfigurationName: !Ref rAutoScalingConfigApp
      MinSize: 1
      MaxSize: 1
      HealthCheckType: ELB
      HealthCheckGracePeriod: 300
      Tags:
        - Key: Name
          Value: "ChemAxon Registry AppServer"
          PropagateAtLaunch: true
  rAutoScalingConfigApp:
    Type: AWS::AutoScaling::LaunchConfiguration
    DependsOn:
    - rDBInstance
    Properties:
      ImageId: !FindInMap [ AWSAMIRegionMap, !Ref "AWS::Region", CACOMPREG18 ]
      InstanceType: !Ref pAppServerInstanceType
      KeyName: !Ref pEC2KeyPair
      SecurityGroups:
      - !Ref rSecurityGroupAppServers
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/sh
          export REGISTRYCXN_HOME='/opt/tomcat/.chemaxon'
          sudo install -D /dev/null $REGISTRYCXN_HOME/config/registry.properties
          sudo bash -c "echo 'RegDBType=MySQL' >> $REGISTRYCXN_HOME/config/registry.properties"
          sudo bash -c "echo 'RegDBDriver=com.mysql.jdbc.Driver' >> $REGISTRYCXN_HOME/config/registry.properties"
          sudo bash -c "echo 'RegDBUrl=jdbc:mysql://${rDBInstance.Endpoint.Address}:3306/compoundregistry?autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8' >> $REGISTRYCXN_HOME/config/registry.properties"
          sudo bash -c "echo 'RegDBUser=${pDBUsername}' >> $REGISTRYCXN_HOME/config/registry.properties"
          sudo bash -c "echo 'RegDBPass=${pDBPassword}' >> $REGISTRYCXN_HOME/config/registry.properties"
          sudo bash -c "echo 'RegDBMaxActive=30' >> $REGISTRYCXN_HOME/config/registry.properties"
          sudo bash -c "echo 'RegDBValidationQuery=SELECT 1' >> $REGISTRYCXN_HOME/config/registry.properties"

  ###
  ### Database
  ###
  rDBInstance:
    Type: AWS::RDS::DBInstance
    DependsOn: rSecurityGroupChemAxonDB
    Properties:
      DBSubnetGroupName: !Ref rDBSubnetGroup
      DBSecurityGroups:
      - !Ref rSecurityGroupChemAxonDB
      AllocatedStorage: !Ref pDBAllocatedStorage
      DBInstanceClass: !Ref pDBInstanceType
      Engine: MySQL
      MasterUsername: !Ref pDBUsername
      MasterUserPassword: !Ref pDBPassword
      MultiAZ: !Ref pDBMultiAZ
      Tags:
      - Key: Name
        Value: ChemAxon Compound Registry DB

  rDBSubnetGroup: 
    Type: AWS::RDS::DBSubnetGroup
    Properties: 
      DBSubnetGroupDescription: Subnet group for ChemAxon DB instances
      SubnetIds: 
      - !Ref pDBSubnetA
      - !Ref pDBSubnetB
      Tags: 
      - Key: Name
        Value: ChemAxon Compound Registry DB Subnet Group

Outputs:
  oLoadBalancerDNS:
    Description: URL to Load Balancer to access ChemAxon Compound Registry
    Value: !Sub http://${rApplicationLoadBalancer.DNSName}/RegistryCxn
  oInternalDNSUrl:
    Condition: cDNSRecord
    Description: URL to Load Balancer to access ChemAxon Compound Registry
    Value: !Sub http://chemaxon.${pDnsHostedZoneApexDomain}/RegistryCxn
